--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/project-track-edit-form.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/project-track-edit-form.html.twig
@@ -72,10 +72,26 @@
     <div class="grid grid-cols-1 gap-4">
       {% set defaultOpen = form['#project_tools']|length > 1 ? false : true %}
       {% for key, projectTrackTool in form['#project_tools'] %}
+        {% set blockers = form['#tool_helper'].getToolBlockers(projectTrackTool) %}
         <div class="tool-wrapper" x-data="{{ defaultOpen ? '{open: true}' : '{open: false}' }}">
           <div class="container bg-white dark:bg-secondary my-4 drop-shadow-md">
             {{ include('@itkdev_project_theme/components/project-track-tool-header.html.twig') }}
+            <div>
             <div class="px-4 py-4" x-show="open" x-transition>
+              {% if blockers|length > 0 %}
+                <div class="blockers flex alert-danger p-3 rounded">
+                  <div class="m-5 self-center text-xl">
+                    <i class="text-red-700 fa-solid fa-triangle-exclamation"></i>
+                  </div>
+                  <div>
+                    {% for blocker in blockers %}
+                      <div>
+                        {{ blocker['#text_stop']|raw }}
+                      </div>
+                    {% endfor %}
+                  </div>
+                </div>
+              {% endif %}
               {{ drupal_entity(projectTrackTool.getToolEntityType, projectTrackTool.getToolId) }}
               <div class="flex justify-end">
                 {% if projectTrackTool.access('update') %}
@@ -88,6 +104,7 @@
                   </a>
                 {% endif %}
               </div>
+            </div>
             </div>
           </div>
         </div>
