Applied coding standards

--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/form-element--webform-ai-screening-yes-no-stop.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/form-element--webform-ai-screening-yes-no-stop.html.twig
@@ -12,7 +12,7 @@
     type == 'radio' ? 'flex items-center gap-3 cursor-pointer',
     type == 'checkbox' ? 'flex items-center gap-3',
     'yes-no-stop',
-    'content-wrapper'
+    'content-wrapper',
   ]
 %}
 {%
