--- a/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
+++ b/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
@@ -236,6 +236,10 @@ input.error {
   }
 }
 
+.element-yes-no-stop-minimize {
+  background: var(--theme-secondary);
+}
+
 .ai-screening-yes-no-stop--text-question {
   margin: 0 0 1em;
 }
