--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/form-element--webform-ai-screening-yes-no-stop.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/form-element--webform-ai-screening-yes-no-stop.html.twig
@@ -56,20 +56,29 @@
       {{ description.content }}
     </div>
   {% endif %}
-
-  {% if element.text_yes %}
-    <div>
-      {{ element.text_yes }}
+  <div x-data="{{ defaultOpen ? '{open: false}' : '{open: true}' }}" :class="open ? 'overflow-hidden' : 'overflow-visible'">
+    <div class="relative">
+      <div x-on:click="open = !open" class="cursor-pointer absolute right-0 top-0 mr-3 mt-1">
+        <div x-show="!open" class="flex align-center items-center"><i class="fa-regular fa-square-plus"></i></div>
+        <div x-show="open" class="flex align-center items-center"><i class="fa-regular fa-square-minus"></i></div>
+      </div>
     </div>
-  {% endif %}
-  {% if element.text_no %}
-    <div>
-      {{ element.text_no }}
+    <div x-show="open" x-transition>
+      {% if element.text_yes %}
+        <div>
+          {{ element.text_yes }}
+        </div>
+      {% endif %}
+      
+      {% if element.text_no %}
+        <div>
+          {{ element.text_no }}
+        </div>
+      {% endif %}
+
+      {% if element.text_stop %}
+        {{ element.text_stop }}
+      {% endif %}
     </div>
-  {% endif %}
-
-  {% if element.text_stop %}
-    {{ element.text_stop }}
-  {% endif %}
-
+  </div>
 </div>
