--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html--ai-screening-yes-no-stop.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html--ai-screening-yes-no-stop.html.twig
@@ -16,7 +16,7 @@
 
 <div class="webform-element content-wrapper yes-no-stop pb-4 mb-4 border-b">
   <div class="element-question">
-    <div class="font-thin mb-2">{{ title }}</div>
+    <div class="font-thin mb-2  w-full xl:w-[800px]">{{ title }}</div>
     {% if element['#help'] %}
       <div class="font-thin mb-2">( {{ element['#help']|striptags }} )</div>
     {% endif %}
