--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig
@@ -7,8 +7,17 @@
 {% extends '@itkdev_project_theme/content-wrapper.html.twig' %}
 
 {% block title %}
+  {% if data.projectTracks|length is same as(1) %}
+    {% set projectTrack = data.projectTracks|first %}
+    {% set pageTitle =
+      projectTrack.entity.getProject.label ?
+      'Report: @node_label'|t({'@node_label': projectTrack.entity.getProject.label}) :
+      'Report: Project tracks'|t
+  %}
+  {% else %}
+    {% set pageTitle = 'Report: Project tracks'|t %}
+  {% endif %}
   {{ attach_library('itkdev_project_theme/charts_js') }}
-  {% set pageTitle = 'Report: Project tracks'|t %}
   {{ parent() }}
 {% endblock %}
 
@@ -25,15 +34,15 @@
 
   <div class="p-5 rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-slate-600 drop-shadow-md">
     {% for key, track in data.projectTracks %}
+      <header class="flex justify-between px-4 -m-4 py-4 border-b mb-1">
+        <h2 class="m-0 text-lg dark:text-white">{{ track.entity.label }}</h2>
+      </header>
       {% if track.entity.getType.field_report_type.value is same as('bubble_chart') %}
         {% set dimensions = track.entity.getDimensions %}
         {% set evaluationOptions = data.trackHelper.getEvaluationOptions %}
         {% set evaluationColor = evaluationOptions[evaluation] ?? 'bg-slate-300' %}
 
         <div class="mb-16">
-          <header class="flex justify-between px-4 py-4 border-b">
-            <h2 class="m-0 text-lg dark:text-white">{{ track.entity.label }}</h2>
-          </header>
           <div>
             <div class="my-3 flex flex-wrap px-4">
               <div class="basis-full">
