--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/webformSubmissionReportHeader.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/webformSubmissionReportHeader.html.twig
@@ -4,7 +4,7 @@
   <div id="reportLawTrackToolbar" class="flex flex-wrap -mx-5 px-5 border-b mb-3">
     <div class="my-5 mr-5 basis-1/6 flex-none flex flex-nowrap">
       <input class="form-checkbox bg-primary text-primary border border-primary rounded-md py-3 px-3" type="checkbox" id="hideQuestionsAnswers" name="hideQuestionsAnswers" checked />
-      <label class="ml-3 whitespace-nowrap option font-semibold" for="hideQuestionsAnswers">{{ 'Hide Questions/Answers'|t }}</label>
+      <label class="ml-3 whitespace-nowrap option font-semibold" for="hideQuestionsAnswers">{{ 'Hide questions/answers'|t }}</label>
     </div>
     <div class="my-5 mr-5 basis-1/6 flex-none flex flex-nowrap">
       <input class="form-checkbox bg-primary text-primary border border-primary rounded-md py-3 px-3" type="checkbox" id="showStops" name="showStops" checked />
@@ -33,7 +33,7 @@
   </div>
 
   <div class="ai-screening-yes-no-stop w-full xl:w-[800px] pb-4 mb-4 border-b">
-    <h2 class="mt-0 mb-3">{{ 'Submission'|t }}</h2>
+    <h2 class="mt-0 mb-3">{{ 'Report'|t }}</h2>
     <div class="task">
       <div><i class="text-green-700 mr-2 fa-regular fa-circle-check"></i><h5 class="inline-block">{{ 'Task'|t }}</h5></div>
       <p>{{ 'You must ensure that users/citizens that use an AI-system are informed that it is an AI-system.'|t }}</p>
