--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/breadcrumb.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/breadcrumb.html.twig
@@ -1,5 +1,5 @@
 {% if breadcrumb %}
-  <div class="container mx-auto px-3 text-secondary my-3 flex justify-end">
+  <div id="breadcrumb" class="container mx-auto px-3 text-secondary my-3 flex justify-end">
     <nav role="navigation" aria-labelledby="system-breadcrumb">
       <h2 id="system-breadcrumb" class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
       <ol class="flex gap-1">
