--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/header.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/header.html.twig
@@ -1,4 +1,4 @@
-<header role="banner" class="bg-white dark:bg-secondary text-primary px-3 md:px-5 py-3 flex flex-row items-center gap-5 border-b border-primary" >
+<header id="header" role="banner" class="bg-white dark:bg-secondary text-primary px-3 md:px-5 py-3 flex flex-row items-center gap-5 border-b border-primary" >
 
   {{ include('@itkdev_project_theme/components/nav-button.html.twig') }}
 
