--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/page.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/page.html.twig
@@ -48,12 +48,12 @@
 
 <div>
   <main role="main" class="">
-    <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
-    <div class="flex h-screen overflow-hidden">
-      <aside :class="sidebarToggle ? 'translate-x-0' : '-translate-x-full'" class="absolute w-72 h-screen left-0 top-0 z-20 flex flex-col overflow-y-hidden bg-zinc-800 duration-300 ease-linear lg:static lg:translate-x-0 -translate-x-full border-r border-slate-100" @click.outside="sidebarToggle = false">
+    <a id="" tabindex="-1"></a>{# link is in html.html.twig #}
+    <div class="flex h-screen print:h-auto overflow-hidden">
+      <aside id="sidebar-nav" :class="sidebarToggle ? 'translate-x-0' : '-translate-x-full'" class="absolute w-72 h-screen left-0 top-0 z-20 flex flex-col overflow-y-hidden bg-zinc-800 duration-300 ease-linear lg:static lg:translate-x-0 -translate-x-full border-r border-slate-100" @click.outside="sidebarToggle = false">
         {{ page.navigation }}
       </aside>
-      <div class="relative flex flex-1 flex-col overflow-y-auto overflow-x-hidden">
+      <div id="main-content" class="relative flex flex-1 flex-col overflow-y-auto overflow-x-hidden">
         {{ include('@itkdev_project_theme/components/header.html.twig') }}
         <div class="my-3">{{ page.header }}</div>
         <div class="max-w-screen-2xl p-4 md:p-6 2xl:p-10">
