Added static page content type

--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/node-edit-form.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/node-edit-form.html.twig
@@ -23,7 +23,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="pb-5 rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-slate-600 drop-shadow-md">
+  <div class="content pb-5 rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-slate-600 drop-shadow-md">
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-10">
       <div class="p-3">
         {{ form|without('advanced', 'group_fieldset', 'actions', 'group_state') }}
