--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/site-setup.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/site-setup.html.twig
@@ -15,6 +15,20 @@
   <div class="p-5 rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-slate-600 drop-shadow-md">
     <div class="mb-8">
       <header class="flex justify-between px-4 py-4 border-b">
+        <h2 class="m-0 text-lg dark:text-white">{{ 'Setup frontpage'|t }}</h2>
+      </header>
+      <div class="my-5 flex flex-wrap px-4">
+        <div class="basis-full flex justify-end">
+          <a href="{{ path('ai_screening.frontpage_settings') }}" class="inline-block btn-primary bg-black text-white hover:bg-stone-700">
+            <i class="fa-solid fa-pencil mr-3"></i>
+            <span>{{ 'Setup frontpage'|t }}</span>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="mb-8">
+      <header class="flex justify-between px-4 py-4 border-b">
         <h2 class="m-0 text-lg dark:text-white">{{ 'Setup project track thresholds'|t }}</h2>
       </header>
       <div class="my-5 flex flex-wrap px-4">
