Changed templates and css to streamline tracks

--- a/web/themes/custom/itkdev/itkdev_project_theme/css/content.css
+++ b/web/themes/custom/itkdev/itkdev_project_theme/css/content.css
@@ -15,15 +15,21 @@
   ul {
     margin-left: 1em;
     list-style-type: inherit;
+    margin-bottom: 0.75rem;
   }
 
   ol {
     margin-left: 1em;
     list-style-type: decimal;
+    margin-bottom: 0.75rem;
   }
 
   a {
     text-decoration: underline;
+  }
+
+  p {
+    margin-bottom: 0.75rem;
   }
 
   blockquote {
