--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/webform-submission-data.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/webform-submission-data.html.twig
@@ -17,8 +17,9 @@
     'webform-submission-data',
     'webform-submission-data--webform-' ~ webform.id()|clean_class,
     view_mode ? 'webform-submission-data--view-mode-' ~ view_mode|clean_class,
+    'max-w-3xl'
   ]
 %}
 <div{{ attributes.addClass(classes) }}>
-{{ elements }}
+  {{ elements }}
 </div>
