--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html--ai-screening-static-select.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html--ai-screening-static-select.html.twig
@@ -24,12 +24,8 @@
 %}
 {% set classNames = evaluationClasses[value['#plain_text']] ?? '' %}
 
-<div class="mb-4 border-b flex justify-between gap-16 mt-3">
+<div class="mb-4 border-b flex justify-between gap-16 mt-3 last:border-b-0">
   <div class="font-thin mb-2">{{ title }}</div>
-  {% if element['#help'] %}
-    <div class="font-thin mb-2">( {{ element['#help']|striptags }} )</div>
-  {% endif %}
-
   {% set displayedValue = (value['#markup'] is same as ('{Empty}')) or (value['#plain_text'] is empty) ? '{Empty}'|t : value['#plain_text']|t %}
   <div class="capitalize">
     <div class="relative bg-white flex items-center mb-3 md:mb-5 min-w-28 justify-end">
