--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html--ai-screening-yes-no-stop.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html--ai-screening-yes-no-stop.html.twig
@@ -14,7 +14,7 @@
  */
 #}
 
-<div class="webform-element content-wrapper yes-no-stop pb-4 mb-4 border-b">
+<div class="webform-element content-wrapper yes-no-stop pb-4 mb-4 border-b last:border-b-0">
   <div class="element-question">
     <div class="font-thin mb-2  w-full xl:w-[800px]">{{ title }}</div>
     {% if element['#help'] %}
