--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html.html.twig
@@ -14,7 +14,7 @@
  */
 #}
 
-<div class="pb-4 mb-4 border-b">
+<div class="pb-4 mb-4 border-b last:border-b-0">
   <div class="font-thin mb-2">{{ title }}</div>
   {% if element['#help'] %}
     <div class="font-thin mb-2">( {{ element['#help']|striptags }} )</div>
