Applied coding standards

--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/webform-submission-data.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/webform-submission-data.html.twig
@@ -17,7 +17,7 @@
     'webform-submission-data',
     'webform-submission-data--webform-' ~ webform.id()|clean_class,
     view_mode ? 'webform-submission-data--view-mode-' ~ view_mode|clean_class,
-    'max-w-3xl'
+    'max-w-3xl',
   ]
 %}
 <div{{ attributes.addClass(classes) }}>
