--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html--ai-screening-static-select.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html--ai-screening-static-select.html.twig
@@ -27,7 +27,7 @@
 <div class="mb-4 border-b flex justify-between gap-16 mt-3 last:border-b-0">
   <div class="font-thin mb-2">{{ title }}</div>
   {% set displayedValue = (value['#markup'] is same as ('{Empty}')) or (value['#plain_text'] is empty) ? '{Empty}'|t : value['#plain_text']|t %}
-  <div class="capitalize">
+  <div>
     <div class="relative bg-white flex items-center mb-3 md:mb-5 min-w-28 justify-end">
       <div class="{{ classNames is not empty ? 'mr-3' }} line-clamp-6">
         {{ displayedValue }}
