--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig
@@ -30,14 +30,15 @@
     refused: 'bg-red-700',
   }
   %}
+
   {% set projectCount = data.projectTracks|length %}
 
   <div class="p-5 rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-slate-600 drop-shadow-md">
     {% for key, track in data.projectTracks %}
-      <header class="flex justify-between px-4 -m-4 py-4 border-b mb-1">
-        <h2 class="m-0 text-lg dark:text-white">{{ track.entity.label }}</h2>
-      </header>
       {% if track.entity.getType.field_report_type.value is same as('bubble_chart') %}
+        <header class="flex justify-between px-4 -m-4 py-4 border-b mb-1">
+          <h2 class="m-0 text-lg dark:text-white">{{ track.entity.label }}</h2>
+        </header>
         {% set dimensions = track.entity.getDimensions %}
         {% set evaluationOptions = data.trackHelper.getEvaluationOptions %}
         {% set evaluationColor = evaluationOptions[evaluation] ?? 'bg-slate-300' %}
@@ -88,15 +89,15 @@
           {% if trackTypeConfig.quadrant_texts is not empty and projectCount is same as 1 %}
             {% set activeQuadrant = track.entity.getConfiguration.bubbleChartReportResult.activeQuadrant %}
             <div>
-              {% if activeQuadrant is same as '2' or activeQuadrant is same as '4' %}
+              {% if activeQuadrant == '2' or activeQuadrant == '4' %}
                 <h5>
                   <i class="text-blue-600 mr-3 fa-regular fa-circle-info"></i>{{ 'Consideration'|t }}
                 </h5>
-              {% elseif activeQuadrant is same as '1' %}
+              {% elseif activeQuadrant == '1' %}
                 <h5>
                   <i class="text-green-600 mr-3 fa-regular fa-circle-check"></i>{{ 'Task'|t }}
                 </h5>
-              {% elseif activeQuadrant is same as '3' %}
+              {% elseif activeQuadrant == '3' %}
                 <h5>
                   <i class="text-red-600 mr-3 fa-regular fa-circle-exclamation"></i>{{ 'Rule'|t }}
                 </h5>
@@ -110,14 +111,19 @@
         </div>
       {% endif %}
       {% if track.entity.getType.field_report_type.value is same as('webform_submission') %}
-        {% set tools = data.toolHelper.loadTools(track.entity) %}
-        {% for id, tool in tools %}
-          <div>
-            {% set blockers = data.toolHelper.getToolBlockers(tool) %}
-            {{ include('@itkdev_project_theme/components/webformSubmissionReportHeader.html.twig', {blockers: blockers, tool: tool}) }}
-            {{ drupal_entity('webform_submission', tool.tool_id.value) }}
-          </div>
-        {% endfor %}
+        {% if projectCount is same as (1) %}
+          <header class="flex justify-between px-4 -m-4 py-4 border-b mb-1">
+            <h2 class="m-0 text-lg dark:text-white">{{ track.entity.label }}</h2>
+          </header>
+          {% set tools = data.toolHelper.loadTools(track.entity) %}
+          {% for id, tool in tools %}
+            <div>
+              {% set blockers = data.toolHelper.getToolBlockers(tool) %}
+              {{ include('@itkdev_project_theme/components/webformSubmissionReportHeader.html.twig', {blockers: blockers, tool: tool}) }}
+              {{ drupal_entity('webform_submission', tool.tool_id.value) }}
+            </div>
+          {% endfor %}
+        {% endif %}
       {% endif %}
     {% endfor %}
 
