Use icon from solid package

--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig
@@ -91,7 +91,7 @@
             <div>
               {% if activeQuadrant == '2' or activeQuadrant == '4' %}
                 <h5>
-                  <i class="text-blue-600 mr-3 fa-regular fa-circle-info"></i>{{ 'Consideration'|t }}
+                  <i class="text-blue-600 mr-3 fa-solid fa-circle-info"></i>{{ 'Consideration'|t }}
                 </h5>
               {% elseif activeQuadrant == '1' %}
                 <h5>
