--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig
@@ -16,7 +16,7 @@
     <div class="text-3xl mb-4 font-extrabold text-green-600">{{ data.stats.approvedCount }}</div>
     <div>
       {% trans %}
-        Project that complies to all demands for use
+        Screening that complies to all demands for use
       {% plural data.stats.approvedCount %}
         Screenings that comply to all demands for use
       {% endtrans %}
@@ -26,7 +26,7 @@
     <div class="text-3xl mb-4 font-extrabold text-yellow-600">{{ data.stats.inProgressCount }}</div>
     <div>
       {% trans %}
-        Project that complies to some demands for use
+        Screening that complies to some demands for use
       {% plural data.stats.approvedCount %}
         Screenings that comply to some demands for use
       {% endtrans %}
@@ -36,7 +36,7 @@
     <div class="text-3xl mb-4 font-extrabold text-red-700">{{ data.stats.refusedCount }}</div>
     <div>
       {% trans %}
-        Project that does not comply to the demands for use
+        Screening that does not comply to the demands for use
       {% plural data.stats.approvedCount %}
         Screenings that do not comply to the demands for use
       {% endtrans %}
