--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/new-project-button.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/new-project-button.html.twig
@@ -3,6 +3,6 @@
 
   <a href="{{ path }}" class="font-thin bg-green-600 hover:bg-green-700 text-white py-2 px-4 rounded inline-flex items-center">
     <i class="fa-solid fa-circle-plus mr-3"></i>
-    <span>{{ 'Create new screening'|t }}</span>
+    <span>{{ 'Create new project'|t }}</span>
   </a>
 {% endif %}
