--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/form/form--ai-screening-project-track-thresholds.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/form/form--ai-screening-project-track-thresholds.html.twig
@@ -21,7 +21,7 @@
 
 {% block content %}
   <div class="container my-8 px-5">
-    {{ 'Define thresholds for all screenings. This is used by the system to make a suggested evaluation by measuring all the combined answers of each project track against the corresponding thresholds.'|t }}
+    {{ 'Define thresholds for all projects. This is used by the system to make a suggested evaluation by measuring all the combined answers of each project track against the corresponding thresholds.'|t }}
   </div>
   <div class="p-5 rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-slate-600 drop-shadow-md">
     <form{{ attributes }}>
