--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig
@@ -16,9 +16,9 @@
     <div class="text-3xl mb-4 font-extrabold text-green-600">{{ data.stats.approvedCount }}</div>
     <div>
       {% trans %}
-        Screening that complies to all demands for use
+        Project that complies to all demands for use
       {% plural data.stats.approvedCount %}
-        Screenings that comply to all demands for use
+        Projects that comply to all demands for use
       {% endtrans %}
     </div>
   </div>
@@ -26,9 +26,9 @@
     <div class="text-3xl mb-4 font-extrabold text-yellow-600">{{ data.stats.inProgressCount }}</div>
     <div>
       {% trans %}
-        Screening that complies to some demands for use
+        Project that complies to some demands for use
       {% plural data.stats.approvedCount %}
-        Screenings that comply to some demands for use
+        Projects that comply to some demands for use
       {% endtrans %}
     </div>
   </div>
@@ -36,9 +36,9 @@
     <div class="text-3xl mb-4 font-extrabold text-red-700">{{ data.stats.refusedCount }}</div>
     <div>
       {% trans %}
-        Screening that does not comply to the demands for use
+        Project that does not comply to the demands for use
       {% plural data.stats.approvedCount %}
-        Screenings that do not comply to the demands for use
+        Projects that do not comply to the demands for use
       {% endtrans %}
     </div>
   </div>
