--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table--front.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table--front.html.twig
@@ -48,7 +48,7 @@
 <div class="mb-5 rounded-sm border border-stroke bg-white px-5 pb-5 pt-7.5 shadow-default dark:border-strokedark dark:bg-slate-600 sm:px-7.5 xl:col-span-8 drop-shadow-md overflow-x-auto">
   <div class="my-4">
     {% if user.hasPermission('create project content') %}
-      <a href="{{ path('node.add', {node_type: 'project'}) }}" class="inline-block btn-primary bg-green-600 text-white hover:bg-green-700"><i class="fa-solid fa-circle-plus"></i><span class="ml-3">{{ 'Create new screening'|t }}</span></a>
+      <a href="{{ path('node.add', {node_type: 'project'}) }}" class="inline-block btn-primary bg-green-600 text-white hover:bg-green-700"><i class="fa-solid fa-circle-plus"></i><span class="ml-3">{{ 'Create new project'|t }}</span></a>
     {% endif %}
   </div>
   <div class="text-xl text-slate-500">{{ 'Latest'|t }}</div>
@@ -134,7 +134,7 @@
   </table>
   <div class="mt-8 flex justify-end">
     <a href="{{ path('view.projects.page_1') }}" class="bg-green-600 hover:bg-green-700 text-white py-2 px-4 rounded inline-flex items-center">
-      <span>{{ 'Show all screenings'|t }}</span>
+      <span>{{ 'Show all projects'|t }}</span>
     </a>
   </div>
 </div>
